[package]
name = "killswitch"
version = "0.1.0"
edition = "2021"

# Killswitch server
[[bin]]
name = "ks_server"
path = "src/bin/ks_server.rs"

# Killswitch client library
[lib]
name = "ks_client"
path = "src/lib.rs"

# # Examples
# [[example]]
# name = "example1"
# path = "examples/example1.rs"
#
# [[example]]
# name = "example2"
# path = "examples/example2.rs"

[dependencies]
rouille = "3.6.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
